First approach to Orders View
